--- a/app/views/themes/bioart/events/_event.html.haml
+++ b/app/views/themes/bioart/events/_event.html.haml
@@ -2,9 +2,9 @@
 - @activities.each do |activity|
   = link_to activity, class: [:activity, :column] do
     .activity_image{style: "background: url(#{activity.photos.empty? ? theme_image_path('placeholder.png') : activity.photos.first.image.url(:box)}) center/cover no-repeat"}
-      - if activity.project
+      - unless activity.projects.empty?
         .hashtag
-          = "##{activity.project.name}"
+          = activity.projects.map(&:to_hashtag).join(' / ')
     .activity_content
       .title= activity.name
       - if activity.eventsessions.blank?
