--- a/app/views/themes/bioart/admin/posts/_form.html.haml
+++ b/app/views/themes/bioart/admin/posts/_form.html.haml
@@ -16,7 +16,7 @@
   .row.expanded
     .small-12.large-6.columns= f.input :title, input_html: {required: ''}, label: 'Post title'
   .row.expanded
-    .small-12.large-6.columns= f.input :project, collection: Project.all.order(name: :asc), label: 'Assign to a project?', hint: 'If chosen, this post will display under the sub-theme of that project and show in that project\'s blog section.', collection: Project.accessible_by(current_ability), include_blank: can?(:create, Post.new(project_id: nil))
+    .small-12.large-6.columns= f.input :projects, input_html: {class: :chosen_select}, label: 'Associate to projects?', hint: 'If chosen, this post will display under the sub-theme of that project and show in that project\'s blog section.', collection: Project.accessible_by(current_ability).sort_by{|x| x.name.downcase}
 
   .row.expanded
     .small-12.columns= f.input :body, as: :ckeditor, input_html: {required: ''}
@@ -27,12 +27,12 @@
     .small-12.large-6.columns
 
 
-      = f.input :user, collection: User.accessible_by(current_ability).sort_by(&:name), label: 'Posted by: ', member_label: Proc.new{|x| x.name + " / " + x.email}, include_blank: false
+      = f.input :user, collection: User.accessible_by(current_ability).sort_by(&:name).map{|x| [x.name + " / " + x.email, x.id]}, label: 'Posted by: ', include_blank: false
 
       - if (!current_user&.artist.nil? && !current_user&.artist&.stays.empty? ) || (f.object.user&.artist && !f.object.user&.artist&.stays.empty?) || (current_user.has_role?(:admin))
-        = f.input :stay, collection: [current_user&.artist&.stays, f.object.user&.artist&.stays, (current_user.has_role?(:admin) ? Stay.all : [])].flatten.compact.uniq.sort_by(&:start_at).delete_if{|x| x.artist.nil? }, label: 'Part of residency: ', member_label: Proc.new{|stay| stay.artist.name + ": " + date_range(stay.start_at, stay.end_at)  }
+        = f.input :stay, collection: [current_user&.artist&.stays, f.object.user&.artist&.stays, (current_user.has_role?(:admin) ? Stay.all : [])].flatten.compact.uniq.sort_by(&:start_at).delete_if{|x| x.artist.nil? }.reverse.map{|stay| [stay.artist.name + ": " + date_range(stay.start_at, stay.end_at), stay.id]  }, label: 'Part of residency: '
       - elsif !f.object.wordpress_author.blank?
-        = f.input :stay, collection: Stay.all.order(&:start_at), label: 'Part of residency: ', member_label: Proc.new{|stay| stay.artist.name + ": " + date_range(stay.start_at, stay.end_at) }
+        = f.input :stay, collection: Stay.all.order(start_at: :desc).map{|stay| [stay.artist.name + ": " + date_range(stay.start_at, stay.end_at), stay.id]  }, label: 'Part of residency: '
   .row.expanded
     .small-12.large-7.columns
       %hr
