HMs seems to check out OK; preparing for staging deployment

--- a/app/views/themes/bioart/shared/_project_menu.html.haml
+++ b/app/views/themes/bioart/shared/_project_menu.html.haml
@@ -9,7 +9,7 @@
   - unless @project.activities.published.empty?
     %li= link_to 'Events', project_events_path(@project), class: [controller.controller_name == 'activities' ? :active : false]
     - lastslug = 'events'
-
+  - alreadyshown = []
   - @project.pages.roots.each do |page|
     - next if page.hide_from_menu
     - next if page.is_project_overview == true
@@ -19,12 +19,14 @@
       - unless page.children.delete_if{|x| x.hide_from_menu == true }.empty?
         %ul.menu
           - page.children.delete_if{|x| (!x.projects.include?(@project) || x.hide_from_menu == true) }.each do |pp|
+            - alreadyshown.push(pp)
             %li= link_to pp.title, project_page_path(@project, pp), class: [(controller.controller_name == 'pages' || controller.controller_name == 'posts') && @page && (@page == pp || @page.descendant_of?(pp)) ? :active : false]
   - @project.pages.reject{|x| x.root? }.each do |page|
     - next if page.hide_from_menu
     - next if page.is_project_overview == true
     - next if page.leaf?
     - next unless page.projects.include?(@project)
+    - next if alreadyshown.include?(page)
     %li
       = link_to page.title, project_page_path(@project, page), class: [(controller.controller_name == 'pages' || controller.controller_name == 'posts') && @page && (@page == page || @page.descendant_of?(page)) ? :active : false]
       - unless page.children.delete_if{|x| (!x.projects.include?(@project) || x.hide_from_menu == true) }.empty?
